v17.1/interfaces/GC.Spread.Sheets.Slicers.ISlicer.md
# Interface: ISlicer

[Sheets](../modules/GC.Spread.Sheets.md).[Slicers](../modules/GC.Spread.Sheets.Slicers.md).ISlicer

## Table of contents

### Methods

- [allowMove](GC.Spread.Sheets.Slicers.ISlicer.md#allowmove)
- [allowResize](GC.Spread.Sheets.Slicers.ISlicer.md#allowresize)
- [captionName](GC.Spread.Sheets.Slicers.ISlicer.md#captionname)
- [columnCount](GC.Spread.Sheets.Slicers.ISlicer.md#columncount)
- [disableResizingAndMoving](GC.Spread.Sheets.Slicers.ISlicer.md#disableresizingandmoving)
- [dynamicMove](GC.Spread.Sheets.Slicers.ISlicer.md#dynamicmove)
- [dynamicSize](GC.Spread.Sheets.Slicers.ISlicer.md#dynamicsize)
- [endColumn](GC.Spread.Sheets.Slicers.ISlicer.md#endcolumn)
- [endColumnOffset](GC.Spread.Sheets.Slicers.ISlicer.md#endcolumnoffset)
- [endRow](GC.Spread.Sheets.Slicers.ISlicer.md#endrow)
- [endRowOffset](GC.Spread.Sheets.Slicers.ISlicer.md#endrowoffset)
- [fromJSON](GC.Spread.Sheets.Slicers.ISlicer.md#fromjson)
- [getStyleName](GC.Spread.Sheets.Slicers.ISlicer.md#getstylename)
- [height](GC.Spread.Sheets.Slicers.ISlicer.md#height)
- [isLocked](GC.Spread.Sheets.Slicers.ISlicer.md#islocked)
- [isSelected](GC.Spread.Sheets.Slicers.ISlicer.md#isselected)
- [isVisible](GC.Spread.Sheets.Slicers.ISlicer.md#isvisible)
- [itemHeight](GC.Spread.Sheets.Slicers.ISlicer.md#itemheight)
- [name](GC.Spread.Sheets.Slicers.ISlicer.md#name)
- [nameInFormula](GC.Spread.Sheets.Slicers.ISlicer.md#nameinformula)
- [position](GC.Spread.Sheets.Slicers.ISlicer.md#position)
- [refresh](GC.Spread.Sheets.Slicers.ISlicer.md#refresh)
- [showHeader](GC.Spread.Sheets.Slicers.ISlicer.md#showheader)
- [showNoDataItems](GC.Spread.Sheets.Slicers.ISlicer.md#shownodataitems)
- [showNoDataItemsInLast](GC.Spread.Sheets.Slicers.ISlicer.md#shownodataitemsinlast)
- [sortState](GC.Spread.Sheets.Slicers.ISlicer.md#sortstate)
- [sourceName](GC.Spread.Sheets.Slicers.ISlicer.md#sourcename)
- [startColumn](GC.Spread.Sheets.Slicers.ISlicer.md#startcolumn)
- [startColumnOffset](GC.Spread.Sheets.Slicers.ISlicer.md#startcolumnoffset)
- [startRow](GC.Spread.Sheets.Slicers.ISlicer.md#startrow)
- [startRowOffset](GC.Spread.Sheets.Slicers.ISlicer.md#startrowoffset)
- [style](GC.Spread.Sheets.Slicers.ISlicer.md#style)
- [toImageSrc](GC.Spread.Sheets.Slicers.ISlicer.md#toimagesrc)
- [toJSON](GC.Spread.Sheets.Slicers.ISlicer.md#tojson)
- [visuallyNoDataItems](GC.Spread.Sheets.Slicers.ISlicer.md#visuallynodataitems)
- [width](GC.Spread.Sheets.Slicers.ISlicer.md#width)
- [x](GC.Spread.Sheets.Slicers.ISlicer.md#x)
- [y](GC.Spread.Sheets.Slicers.ISlicer.md#y)

## Methods

### <a id="allowmove" name="allowmove"></a> allowMove

▸ **allowMove**(`value?`, `shouldCallback?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |
| `shouldCallback?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="allowresize" name="allowresize"></a> allowResize

▸ **allowResize**(`value?`, `shouldCallback?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |
| `shouldCallback?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="captionname" name="captionname"></a> captionName

▸ **captionName**(`name?`, `shouldCallback?`): `string` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `name?` | `string` |
| `shouldCallback?` | `boolean` |

#### Returns

`string` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="columncount" name="columncount"></a> columnCount

▸ **columnCount**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="disableresizingandmoving" name="disableresizingandmoving"></a> disableResizingAndMoving

▸ **disableResizingAndMoving**(`value?`, `shouldCallback?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |
| `shouldCallback?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="dynamicmove" name="dynamicmove"></a> dynamicMove

▸ **dynamicMove**(`value?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="dynamicsize" name="dynamicsize"></a> dynamicSize

▸ **dynamicSize**(`value?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="endcolumn" name="endcolumn"></a> endColumn

▸ **endColumn**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="endcolumnoffset" name="endcolumnoffset"></a> endColumnOffset

▸ **endColumnOffset**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="endrow" name="endrow"></a> endRow

▸ **endRow**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="endrowoffset" name="endrowoffset"></a> endRowOffset

▸ **endRowOffset**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="fromjson" name="fromjson"></a> fromJSON

▸ **fromJSON**(`data`): `any`

#### Parameters

| Name | Type |
| :------ | :------ |
| `data` | `any` |

#### Returns

`any`

___

### <a id="getstylename" name="getstylename"></a> getStyleName

▸ **getStyleName**(): `undefined` \| `string`

#### Returns

`undefined` \| `string`

___

### <a id="height" name="height"></a> height

▸ **height**(`value?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="islocked" name="islocked"></a> isLocked

▸ **isLocked**(`value?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="isselected" name="isselected"></a> isSelected

▸ **isSelected**(`value?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="isvisible" name="isvisible"></a> isVisible

▸ **isVisible**(`value?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="itemheight" name="itemheight"></a> itemHeight

▸ **itemHeight**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="name" name="name"></a> name

▸ **name**(`name?`, `shouldCallback?`): `string` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `name?` | `string` |
| `shouldCallback?` | `boolean` |

#### Returns

`string` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="nameinformula" name="nameinformula"></a> nameInFormula

▸ **nameInFormula**(): `string`

#### Returns

`string`

___

### <a id="position" name="position"></a> position

▸ **position**(`value?`): [`Point`](../classes/GC.Spread.Sheets.Point.md) \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`Point`](../classes/GC.Spread.Sheets.Point.md) |

#### Returns

[`Point`](../classes/GC.Spread.Sheets.Point.md) \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="refresh" name="refresh"></a> refresh

▸ **refresh**(): `void`

#### Returns

`void`

___

### <a id="showheader" name="showheader"></a> showHeader

▸ **showHeader**(`value?`, `shouldCallback?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |
| `shouldCallback?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="shownodataitems" name="shownodataitems"></a> showNoDataItems

▸ **showNoDataItems**(`isShow?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `isShow?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="shownodataitemsinlast" name="shownodataitemsinlast"></a> showNoDataItemsInLast

▸ **showNoDataItemsInLast**(`isShow?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `isShow?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="sortstate" name="sortstate"></a> sortState

▸ **sortState**(`value?`): [`SortState`](../enums/GC.Spread.Sheets.SortState.md) \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`SortState`](../enums/GC.Spread.Sheets.SortState.md) |

#### Returns

[`SortState`](../enums/GC.Spread.Sheets.SortState.md) \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="sourcename" name="sourcename"></a> sourceName

▸ **sourceName**(): `string`

#### Returns

`string`

___

### <a id="startcolumn" name="startcolumn"></a> startColumn

▸ **startColumn**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="startcolumnoffset" name="startcolumnoffset"></a> startColumnOffset

▸ **startColumnOffset**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="startrow" name="startrow"></a> startRow

▸ **startRow**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="startrowoffset" name="startrowoffset"></a> startRowOffset

▸ **startRowOffset**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="style" name="style"></a> style

▸ **style**(`style?`, `shouldCallback?`): [`SlicerStyle`](../classes/GC.Spread.Sheets.Slicers.SlicerStyle.md) \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `style?` | `string` \| [`SlicerStyle`](../classes/GC.Spread.Sheets.Slicers.SlicerStyle.md) |
| `shouldCallback?` | `boolean` |

#### Returns

[`SlicerStyle`](../classes/GC.Spread.Sheets.Slicers.SlicerStyle.md) \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="toimagesrc" name="toimagesrc"></a> toImageSrc

▸ **toImageSrc**(): `string` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Returns

`string` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="tojson" name="tojson"></a> toJSON

▸ **toJSON**(): `any`

#### Returns

`any`

___

### <a id="visuallynodataitems" name="visuallynodataitems"></a> visuallyNoDataItems

▸ **visuallyNoDataItems**(`value?`): `boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`boolean` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="width" name="width"></a> width

▸ **width**(`value?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="x" name="x"></a> x

▸ **x**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

___

### <a id="y" name="y"></a> y

▸ **y**(`value?`, `shouldCallback?`): `number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |
| `shouldCallback?` | `boolean` |

#### Returns

`number` \| [`ISlicer`](GC.Spread.Sheets.Slicers.ISlicer.md)
